--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "scripts": {
     "build": "npm run build:server && npm run build:frontend",
     "build:server": "npx tsc",
-    "build:frontend": "cd src/frontend && npm run build && rm -rf ../../public && cp -r dist ../../public",
+    "build:frontend": "cd src/frontend && npm run build",
     "prepublishOnly": "npm run build",
     "start": "node dist/server/index.js",
     "dev": "npx ts-node src/server/index.ts",
     "dev:frontend": "cd src/frontend && npm run dev",
+    "dev:all": "concurrently -n \"backend,frontend\" -c \"blue,green\" \"npm run dev\" \"npm run dev:frontend\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -58,6 +59,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^22.13.10",
     "@types/uuid": "^10.0.0",
+    "concurrently": "^9.2.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3"
   }
