--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,23 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.20",
-    "preact": "^10.27.2"
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.10.2",
-    "@tailwindcss/vite": "^4.1.18",
-    "@types/node": "^24.10.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.0.0",
+    "@tsconfig/svelte": "^5.0.4",
     "clsx": "^2.1.1",
-    "lucide-preact": "^0.563.0",
-    "socket.io-client": "^4.8.3",
+    "lucide-svelte": "^0.473.0",
+    "svelte": "^5.16.5",
+    "svelte-check": "^4.1.1",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4.0.0",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^6.0.0"
   }
 }
