--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build:css": "tailwindcss -c tailwind.config.js -i src/lib/app.css -o src/lib/tailwind.css --minify",
+    "build": "npm run build:css && vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
@@ -14,14 +15,15 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "autoprefixer": "^10.4.24",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.473.0",
+    "postcss": "^8.5.6",
     "svelte": "^5.16.5",
     "svelte-check": "^4.1.1",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.9.3",
     "vite": "^6.0.0"
   }
